--- a/package.json
+++ b/package.json
@@ -1,36 +1,56 @@
 {
-  "name": "react_template",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/node": "^16.18.108",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "react_template",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@types/node": "^16.18.108",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-scripts": "5.0.1",
+		"eslint": "8.45.0",
+		"typescript": "5.1.6",
+		"postcss": "8.4.27",
+		"js-cookie": "^3.0.5",
+		"autoprefixer": "10.4.14"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"eject": "react-scripts eject",
+		"lint": "prettier --check . && stylelint --allow-empty-input \"**/*.{css,scss}\"",
+		"format": "prettier . --check",
+		"format:fix": "prettier . --write"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/js-cookie": "^3.0.5",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"eslint-config-prettier": "^8.9.0",
+		"prettier": "3.0.0",
+		"prettier-plugin-organize-imports": "^3.2.3",
+		"stylelint": "^15.10.2",
+		"stylelint-config-idiomatic-order": "^9.0.0",
+		"stylelint-config-prettier-scss": "^1.0.0",
+		"stylelint-config-standard": "^34.0.0",
+		"stylelint-config-standard-scss": "^10.0.0"
+	}
 }
